# downloader

./: .dockerignore  .env.example  .env.production  .gitignore  AIOGRAM_UPGRADE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_SETUP.md  Dockerfile  FILE_STRUCTURE.md  FINAL_SUMMARY.md  INDEX.md  OPENSPACE_SUMMARY.md  README.md  STATUS.md  USAGE_GUIDE.md  VERIFICATION.md  bot_complete.py  bot_final.py  bot_working.py  deploy.bat  deploy.sh  direct-deploy.sh  docker-compose.yml  docker-deploy.sh  migrate_db.py  post-setup.sh  pub_key.txt  pyproject.toml  rebuild.sh  requirements.txt  run_bot.bat  server-setup.sh  setup-ssl.sh  simple_bot.py  start.sh  start_bot.bat  start_service.sh  telegram-downloader.service  (+3 more)
openspec/: prd.1.1.md  project.md
openspec/specs/file-storage/: spec.md
openspec/specs/security/: spec.md
openspec/specs/telegram-bot/: spec.md
openspec/specs/web-api/: spec.md
src/: __init__.py  bot.py  bot_aiogram.py  config.py  database.py  db_manager.py  logging_config.py  main.py  rate_limiter.py  singleton_lock.py  storage.py  web.py
